--- a/androidclient/src/main/res/layout/activity_mvc.xml
+++ b/androidclient/src/main/res/layout/activity_mvc.xml
@@ -18,12 +18,22 @@
         android:id="@+id/pwd_tv"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_60"
-        android:hint="password" />
+        android:hint="password"
+        android:inputType="numberPassword" />
 
     <Button
         android:id="@+id/test_bt"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_60"
         android:text="测试" />
+
+    <TextView
+        android:id="@+id/name_pwd_show"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:hint="这里用于显示显示姓名密码"
+        android:minHeight="@dimen/dp_60"
+        android:paddingLeft="@dimen/dp_16" />
 
 </LinearLayout>
