--- a/androidclient/src/main/res/layout/app_title.xml
+++ b/androidclient/src/main/res/layout/app_title.xml
@@ -1,5 +1,4 @@
-<android.support.v7.widget.Toolbar
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
@@ -21,18 +20,33 @@
             android:textSize="@dimen/sp_20" />
 
         <ImageView
-            android:id="@+id/searchicon"
+            android:id="@+id/right_iv"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:layout_alignWithParentIfMissing="false"
             android:layout_gravity="center_vertical"
             android:allowUndo="true"
-            android:visibility="gone"
             android:gravity="center_vertical|center_horizontal"
             android:paddingLeft="@dimen/dp_16"
             android:paddingRight="@dimen/dp_16"
-            android:src="@mipmap/ic_search" />
+            android:src="@mipmap/ic_search"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/right_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_alignWithParentIfMissing="false"
+            android:layout_gravity="center_vertical"
+            android:allowUndo="true"
+            android:text="OK"
+            android:gravity="center_vertical|center_horizontal"
+            android:paddingLeft="@dimen/dp_16"
+            android:paddingRight="@dimen/dp_16"
+            android:src="@mipmap/ic_search"
+            android:visibility="gone" />
 
 
     </RelativeLayout>
